[gd_scene load_steps=10 format=3 uid="uid://b1kfy0mbnfej"]

[ext_resource type="Script" uid="uid://bxdxj6711e52i" path="res://ui/gameplay_ui/scripts/gameplay_ui.gd" id="1_v5qxn"]
[ext_resource type="PackedScene" uid="uid://cs1vmfcrtxu06" path="res://ui/gameplay_ui/scenes/shop_screen.tscn" id="2_3lvfr"]
[ext_resource type="PackedScene" uid="uid://bixll6wybotnp" path="res://ui/gameplay_ui/scenes/pointer_ui.tscn" id="2_3xegi"]
[ext_resource type="PackedScene" uid="uid://dkdcvcgs2jgi1" path="res://ui/gameplay_ui/scenes/stabilization_warning.tscn" id="2_hlo7n"]
[ext_resource type="PackedScene" uid="uid://bpwkegiiu01e8" path="res://ui/gameplay_ui/scenes/collision_warning_graphic.tscn" id="2_wapsp"]
[ext_resource type="PackedScene" uid="uid://cemgi1lk1yt1f" path="res://ui/gameplay_ui/gizmos/gizmo_manager.tscn" id="3_vasx0"]
[ext_resource type="PackedScene" uid="uid://x3e2x8oxiu8b" path="res://ui/gameplay_ui/scenes/pointer_gizmo.tscn" id="4_n5c7t"]
[ext_resource type="LabelSettings" uid="uid://da0v0q3k618re" path="res://ui/Themes/label_settings.tres" id="4_vasx0"]
[ext_resource type="PackedScene" uid="uid://c8f8d033685gb" path="res://ui/gameplay_ui/scenes/hook_ui.tscn" id="6_wapsp"]

[node name="GameplayUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_v5qxn")

[node name="PointerUI" parent="." instance=ExtResource("2_3xegi")]
layout_mode = 1

[node name="PointerGizmo" parent="." instance=ExtResource("4_n5c7t")]
layout_mode = 1
mouse_filter = 2

[node name="GizmoManager" parent="." instance=ExtResource("3_vasx0")]
layout_mode = 1

[node name="LayoutsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="LayoutsContainer"]
layout_mode = 2

[node name="CreditsName" type="Label" parent="LayoutsContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "CREDS:"
label_settings = ExtResource("4_vasx0")

[node name="CreditsAmountControl" type="Control" parent="LayoutsContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2

[node name="Amount" type="Label" parent="LayoutsContainer/HBoxContainer/CreditsAmountControl" groups=["credits_counter_label"]]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -12.5
offset_right = 32.0
offset_bottom = 12.5
grow_vertical = 2
size_flags_horizontal = 2
text = "1000"
label_settings = ExtResource("4_vasx0")

[node name="MainEstate" type="Control" parent="LayoutsContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="WarningParent" type="Control" parent="LayoutsContainer/MainEstate"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="CollisionWarningGraphic" parent="LayoutsContainer/MainEstate/WarningParent" instance=ExtResource("2_wapsp")]
layout_mode = 1

[node name="StabilizationWarning" parent="LayoutsContainer/MainEstate/WarningParent" instance=ExtResource("2_hlo7n")]
visible = false
layout_mode = 1

[node name="ShopScreen" parent="LayoutsContainer/MainEstate" instance=ExtResource("2_3lvfr")]
visible = false
layout_mode = 1
mouse_filter = 1

[node name="ExpandBottom" type="Control" parent="LayoutsContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.04

[node name="HookUI" parent="." instance=ExtResource("6_wapsp")]
layout_mode = 1
